--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,35 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
@@ -61,55 +32,21 @@
   inspirehep_id = {3255}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{di_giovanni_behavior-manipulating_2020,
+	title = {A behavior-manipulating virus relative as a source of adaptive genes for {Drosophila} parasitoids},
+	issn = {0737-4038, 1537-1719},
+	url = {https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msaa030/5733738},
+	doi = {10.1093/molbev/msaa030},
+	abstract = {Some species of parasitic wasps have domesticated viral machineries to deliver immunosuppressive factors to their hosts. Up to now, all described cases fall into the Ichneumonoidea superfamily, which only represents around 10\% of hymenoptera diversity, raising the question of whether such domestication occurred outside this clade. Furthermore, the biology of the ancestral donor viruses is completely unknown. Since the 1980’s, we know that Drosophila parasitoids belonging to the Leptopilina genus, which diverged from the Ichneumonoidea superfamily 225My ago, do produce immuno-suppressive viruslike structure in their reproductive apparatus. However, the viral origin of these structures has been the subject of debate. In this paper, we provide genomic and experimental evidence that those structures do derive from an ancestral virus endogenization event. Interestingly, its close relatives induce a behaviour manipulation in present-day wasps. Thus, we conclude that virus domestication is more prevalent than previously thought and that behaviour manipulation may have been instrumental in the birth of such associations.},
+	language = {en},
+	urldate = {2020-03-04},
+	journal = {Molecular Biology and Evolution},
+	author = {Di Giovanni, D and Lepetit, D and Guinet, B and Bennetot, B and Boulesteix, M and Couté, Y and Bouchez, O and Ravallec, M and Varaldi, J},
+	editor = {Malik, Harmit},
+	month = feb,
+	year = {2020},
+	pages = {msaa030},
+  selected={true},
+  google_scholar_id={u5HHmVD_uO8C},
+	file = {10.1146@annurev-ento-070720-074650.pdf:/Users/benjguin/Zotero/storage/2IVEKKW3/10.1146@annurev-ento-070720-074650.pdf:application/pdf;Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:/Users/benjguin/Zotero/storage/TQNGD5XQ/Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:application/pdf},
 }
