--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,6 +47,6 @@
 	year = {2020},
 	pages = {msaa030},
   selected={true},
-  google_scholar_id={u5HHmVD_uO8C},
+  google_scholar_id={https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=WRhFaLEAAAAJ&citation_for_view=WRhFaLEAAAAJ:u5HHmVD_uO8C},
 	file = {10.1146@annurev-ento-070720-074650.pdf:/Users/benjguin/Zotero/storage/2IVEKKW3/10.1146@annurev-ento-070720-074650.pdf:application/pdf;Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:/Users/benjguin/Zotero/storage/TQNGD5XQ/Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:application/pdf},
 }
