--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,46 @@
   inspirehep_id = {3255}
 }
 
+@article{guinet_novel_2024,
+	title = {A novel and diverse family of filamentous {DNA} viruses associated with parasitic wasps},
+	volume = {10},
+	copyright = {https://creativecommons.org/licenses/by-nc/4.0/},
+	issn = {2057-1577},
+	url = {https://academic.oup.com/ve/article/doi/10.1093/ve/veae022/7644867},
+	doi = {10.1093/ve/veae022},
+	abstract = {Abstract
+            Large dsDNA viruses from the Naldaviricetes class are currently composed of four viral families infecting insects and/or crustaceans. Since the 1970s, particles described as filamentous viruses (FVs) have been observed by electronic microscopy in several species of Hymenoptera parasitoids but until recently, no genomic data was available. This study provides the first comparative morphological and genomic analysis of these FVs. We analyzed the genomes of seven FVs, six of which were newly obtained, to gain a better understanding of their evolutionary history. We show that these FVs share all genomic features of the Naldaviricetes while encoding five specific core genes that distinguish them from their closest relatives, the Hytrosaviruses. By mining public databases, we show that FVs preferentially infect Hymenoptera with parasitoid lifestyle and that these viruses have been repeatedly integrated into the genome of many insects, particularly Hymenoptera parasitoids, overall suggesting a long-standing specialization of these viruses to parasitic wasps. Finally, we propose a taxonomical revision of the class Naldaviricetes in which FVs related to the Leptopilina boulardi FV constitute a fifth family. We propose to name this new family, Filamentoviridae.},
+	language = {en},
+	number = {1},
+	urldate = {2024-04-15},
+	journal = {Virus Evolution},
+	author = {Guinet, Benjamin and Leobold, Matthieu and Herniou, Elisabeth A and Bloin, Pierrick and Burlet, Nelly and Bredlau, Justin and Navratil, Vincent and Ravallec, Marc and Uzbekov, Rustem and Kester, Karen and Gundersen Rindal, Dawn and Drezen, Jean-Michel and Varaldi, Julien and Bézier, Annie},
+	month = apr,
+	year = {2024},
+  selected={true},
+	pages = {veae022},
+  google_scholar_id={WRhFaLEAAAAJ:UeHWp8X0CEIC},
+}
+
+@article{guinet_endoparasitoid_2023,
+	title = {Endoparasitoid lifestyle promotes endogenization and domestication of {dsDNA} viruses},
+	volume = {12},
+	issn = {2050-084X},
+	url = {https://elifesciences.org/articles/85993},
+	doi = {10.7554/eLife.85993},
+	abstract = {The accidental endogenization of viral elements within eukaryotic genomes can occasionally provide significant evolutionary benefits, giving rise to their long-term retention, that is, to viral domestication. For instance, in some endoparasitoid wasps (whose immature stages develop inside their hosts), the membrane-fusion property of double-stranded DNA viruses have been repeatedly domesticated following ancestral endogenizations. The endogenized genes provide female wasps with a delivery tool to inject virulence factors that are essential to the developmental success of their offspring. Because all known cases of viral domestication involve endoparasitic wasps, we hypothesized that this lifestyle, relying on a close interaction between individuals, may have promoted the endogenization and domestication of viruses. By analyzing the composition of 124 Hymenoptera genomes, spread over the diversity of this clade and including free-living, ecto, and endoparasitoid species, we tested this hypothesis. Our analysis first revealed that double-stranded DNA viruses, in comparison with other viral genomic structures (ssDNA, dsRNA, ssRNA), are more often endogenized and domesticated (that is, retained by selection) than expected from their estimated abundance in insect viral communities. Second, our analysis indicates that the rate at which dsDNA viruses are endogenized is higher in endoparasitoids than in ectoparasitoids or free-living hymenopterans, which also translates into more frequent events of domestication. Hence, these results are consistent with the hypothesis that the endoparasitoid lifestyle has facilitated the endogenization of dsDNA viruses, in turn, increasing the opportunities of domestications that now play a central role in the biology of many endoparasitoid lineages.},
+	language = {en},
+	urldate = {2023-06-07},
+	journal = {eLife},
+	author = {Guinet, Benjamin and Lepetit, David and Charlat, Sylvain and Buhl, Peter N and Notton, David G and Cruaud, Astrid and Rasplus, Jean-Yves and Stigenberg, Julia and De Vienne, Damien M and Boussau, Bastien and Varaldi, Julien},
+	month = jun,
+  selected={true},
+	year = {2023},
+	pages = {e85993},
+}
+
+
+
 @article{di_giovanni_behavior-manipulating_2020,
 	title = {A behavior-manipulating virus relative as a source of adaptive genes for {Drosophila} parasitoids},
 	issn = {0737-4038, 1537-1719},
