--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,33 @@
   inspirehep_id = {3255}
 }
 
+@article{guinet_dating_2025,
+	title = {Dating the origin of a viral domestication event in parasitoid wasps attacking {Diptera}},
+	volume = {292},
+	issn = {1471-2954},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2024.2135},
+	doi = {10.1098/rspb.2024.2135},
+	abstract = {Over the course of evolution, hymenopteran parasitoids have developed a close relationship with heritable viruses, sometimes integrating viral genes into their chromosomes. For example, in
+              Drosophila
+              parasitoids belonging to the
+              Leptopilina
+              genus, 13 viral genes from the
+              Filamentoviridae
+              family have been domesticated to deliver immunosuppressive factors to host immune cells, thereby protecting parasitoid offspring from the host immune response. The present study aims to comprehensively characterize this domestication event in terms of the viral genes involved, the wasp diversity affected by this event and its chronology. Our genomic analysis of 41 Cynipoidea wasps from six subfamilies revealed 18 viral genes that were endogenized during the early radiation of the Eucoilini/Trichoplastini clade around 75 million years ago. Wasps from this highly diverse clade develop not only from
+              Drosophila
+              but also from a variety of Schizophora. This event coincides with the radiation of Schizophora, a highly speciose Diptera clade, suggesting that viral domestication facilitated wasp diversification in response to host diversification. Additionally, in one of the species, at least one viral gene was replaced by another gene derived from a related filamentovirus. This study highlights the impact of viral domestication on the diversification of parasitoid wasps.},
+	language = {en},
+	number = {2039},
+	urldate = {2025-05-12},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Guinet, Benjamin and Vogel, Jonathan and Kacem Haddj El Mrabet, Nabila and Peters, Ralph S. and Hrcek, Jan and Buffington, Mattew L. and Varaldi, Julien},
+	month = jan,
+	year = {2025},
+  selected={true},
+	pages = {20242135},
+}
+
+
 @article{guinet_novel_2024,
 	title = {A novel and diverse family of filamentous {DNA} viruses associated with parasitic wasps},
 	volume = {10},
@@ -71,7 +98,6 @@
 }
 
 
-
 @article{di_giovanni_behavior-manipulating_2020,
 	title = {A behavior-manipulating virus relative as a source of adaptive genes for {Drosophila} parasitoids},
 	issn = {0737-4038, 1537-1719},
@@ -90,3 +116,40 @@
   google_scholar_id={https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=WRhFaLEAAAAJ&citation_for_view=WRhFaLEAAAAJ:u5HHmVD_uO8C},
 	file = {10.1146@annurev-ento-070720-074650.pdf:/Users/benjguin/Zotero/storage/2IVEKKW3/10.1146@annurev-ento-070720-074650.pdf:application/pdf;Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:/Users/benjguin/Zotero/storage/TQNGD5XQ/Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:application/pdf},
 }
+
+
+@article{rodriguez-varela_five_2024,
+	title = {Five centuries of consanguinity, isolation, health, and conflict in {Las} {Gobas}: {A} {Northern} {Medieval} {Iberian} necropolis},
+	volume = {10},
+	issn = {2375-2548},
+	shorttitle = {Five centuries of consanguinity, isolation, health, and conflict in {Las} {Gobas}},
+	url = {https://www.science.org/doi/10.1126/sciadv.adp8625},
+	doi = {10.1126/sciadv.adp8625},
+	abstract = {Between the 8th and 11th centuries CE, the Iberian Peninsula underwent profound upheaval due to the Umayyad invasion against the Visigoths, resulting in population shifts and lasting demographic impacts. Our understanding of this period is hindered by limited written sources and few archaeogenetic studies. We analyzed 33 individuals from Las Gobas, a necropolis in northern Spain, spanning the 7th to 11th centuries. By combining archaeological and osteological data with kinship, metagenomics, and ancestry analyses, we investigate conflicts, health, and demography of these individuals. We reveal intricate family relationships and genetic continuity within a consanguineous population while also identifying several zoonoses indicative of close interactions with animals. Notably, one individual was infected with a variola virus phylogenetically clustering with the northern European variola complex between {\textasciitilde}885 and 1000 CE. Last, we did not detect a significant increase of North African or Middle East ancestries over time since the Islamic conquest of Iberia, possibly because this community remained relatively isolated.
+          , 
+            Medieval genomes unveil genetic continuity, infections, and family relationships within an isolated population in Northern Iberia.},
+	language = {en},
+	number = {35},
+	urldate = {2025-05-12},
+	journal = {Science Advances},
+	author = {Rodríguez-Varela, Ricardo and Yaka, Reyhan and Pochon, Zoé and Sanchez-Pinto, Iban and Solaun, José Luis and Naidoo, Thijessen and Guinet, Benjamin and Pérez-Ramallo, Patxi and Lagerholm, Vendela Kempe and De Anca Prado, Violeta and Valdiosera, Cristina and Krzewińska, Maja and Herrasti, Lourdes and Azkarate, Agustín and Götherström, Anders},
+	month = aug,
+	year = {2024},
+	pages = {eadp8625},
+	file = {Full Text:/Users/benjguin/Zotero/storage/4NKH5EK6/Rodríguez-Varela et al. - 2024 - Five centuries of consanguinity, isolation, health.pdf:application/pdf},
+}
+
+@misc{oskolkov_disinfecting_2025,
+	title = {Disinfecting eukaryotic reference genomes to improve taxonomic inference from ancient environmental metagenomic data},
+	copyright = {http://creativecommons.org/licenses/by/4.0/},
+	url = {http://biorxiv.org/lookup/doi/10.1101/2025.03.19.644176},
+	doi = {10.1101/2025.03.19.644176},
+	abstract = {Abstract
+          Ancient environmental DNA is increasingly essential for reconstructing past ecosystems, particularly when palaeontological and archaeological tissue remains are absent. Detecting ancient plant and animal DNA in environmental samples often relies on using extensive eukaryotic reference genome databases for profiling shotgun metagenomics data. However, microbial contamination in these references can introduce substantial biases in taxonomic assignments, especially given the typical low abundance of plant and animal DNA in such samples. In this study, we present a method for identifying bacterial and archaeal-like sequences in eukaryotic genomes and apply it to nearly 3,000 reference genomes from NCBI RefSeq and GenBank (vertebrates, invertebrates, plants) as well as the 1,323 PhyloNorway plant genome assemblies from herbarium material from northern high-latitude regions. Our analysis reveals microbial-like sequences in many eukaryotic reference genomes, which are most pronounced in the PhyloNorway dataset. We provide a detailed map of the microbial-like regions, including genomic coordinates and taxonomic annotations. This resource enables the masking of microbial-like regions during profiling analyses, thereby improving the reliability of ancient environmental metagenomic datasets for downstream analyses.},
+	language = {en},
+	urldate = {2025-05-12},
+	author = {Oskolkov, Nikolay and Jin, Chenyu and Clinton, Samantha López and Guinet, Benjamin and Wijnands, Flore and Johnson, Ernst and Kutschera, Verena E. and Kinsella, Cormac M. and Heintzman, Peter D. and Van Der Valk, Tom},
+	month = mar,
+	year = {2025},
+}
+
