--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -55,6 +55,7 @@
 	month = jan,
 	year = {2025},
   selected={true},
+  pdf={PROCB-Dating.pdf},
 	pages = {20242135},
 }
 
@@ -76,6 +77,7 @@
 	month = apr,
 	year = {2024},
   selected={true},
+  pdf={Virus_evolution_Filamentovirus.pdf},
 	pages = {veae022},
   google_scholar_id={WRhFaLEAAAAJ:UeHWp8X0CEIC},
 }
@@ -93,10 +95,10 @@
 	author = {Guinet, Benjamin and Lepetit, David and Charlat, Sylvain and Buhl, Peter N and Notton, David G and Cruaud, Astrid and Rasplus, Jean-Yves and Stigenberg, Julia and De Vienne, Damien M and Boussau, Bastien and Varaldi, Julien},
 	month = jun,
   selected={true},
+  pdf={elife-85993-v1-2.pdf},
 	year = {2023},
 	pages = {e85993},
 }
-
 
 @article{di_giovanni_behavior-manipulating_2020,
 	title = {A behavior-manipulating virus relative as a source of adaptive genes for {Drosophila} parasitoids},
@@ -113,6 +115,7 @@
 	year = {2020},
 	pages = {msaa030},
   selected={true},
+  pdf={MBE_LbFV.pdf},
   google_scholar_id={https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=WRhFaLEAAAAJ&citation_for_view=WRhFaLEAAAAJ:u5HHmVD_uO8C},
 	file = {10.1146@annurev-ento-070720-074650.pdf:/Users/benjguin/Zotero/storage/2IVEKKW3/10.1146@annurev-ento-070720-074650.pdf:application/pdf;Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:/Users/benjguin/Zotero/storage/TQNGD5XQ/Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:application/pdf},
 }
@@ -136,6 +139,7 @@
 	month = aug,
 	year = {2024},
 	pages = {eadp8625},
+  pdf={sciadv.adp8625-1.pdf},
 	file = {Full Text:/Users/benjguin/Zotero/storage/4NKH5EK6/Rodríguez-Varela et al. - 2024 - Five centuries of consanguinity, isolation, health.pdf:application/pdf},
 }
 
