Add Journal names

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@
 }
 
 @article{guinet_dating_2025,
+  abbr={ProcRoyalB},
 	title = {Dating the origin of a viral domestication event in parasitoid wasps attacking {Diptera}},
 	volume = {292},
 	issn = {1471-2954},
@@ -61,6 +62,7 @@
 
 
 @article{guinet_novel_2024,
+  abbr={VirusEvolution},
 	title = {A novel and diverse family of filamentous {DNA} viruses associated with parasitic wasps},
 	volume = {10},
 	copyright = {https://creativecommons.org/licenses/by-nc/4.0/},
@@ -83,6 +85,7 @@
 }
 
 @article{guinet_endoparasitoid_2023,
+  abbr={eLife},
 	title = {Endoparasitoid lifestyle promotes endogenization and domestication of {dsDNA} viruses},
 	volume = {12},
 	issn = {2050-084X},
@@ -101,6 +104,7 @@
 }
 
 @article{di_giovanni_behavior-manipulating_2020,
+  abbr={MBE},
 	title = {A behavior-manipulating virus relative as a source of adaptive genes for {Drosophila} parasitoids},
 	issn = {0737-4038, 1537-1719},
 	url = {https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msaa030/5733738},
@@ -122,6 +126,7 @@
 
 
 @article{rodriguez-varela_five_2024,
+  abbr={ScienceAdvances},
 	title = {Five centuries of consanguinity, isolation, health, and conflict in {Las} {Gobas}: {A} {Northern} {Medieval} {Iberian} necropolis},
 	volume = {10},
 	issn = {2375-2548},
@@ -144,6 +149,7 @@
 }
 
 @misc{oskolkov_disinfecting_2025,
+  abbr={Biorxiv},
 	title = {Disinfecting eukaryotic reference genomes to improve taxonomic inference from ancient environmental metagenomic data},
 	copyright = {http://creativecommons.org/licenses/by/4.0/},
 	url = {http://biorxiv.org/lookup/doi/10.1101/2025.03.19.644176},
