Add dimensions to papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,6 +56,7 @@
 	month = jan,
 	year = {2025},
   selected={true},
+    dimensions={true},
   pdf={PROCB-Dating.pdf},
 	pages = {20242135},
 }
@@ -79,6 +80,7 @@
 	month = apr,
 	year = {2024},
   selected={true},
+  dimensions={true},
   pdf={Virus_evolution_Filamentovirus.pdf},
 	pages = {veae022},
   google_scholar_id={WRhFaLEAAAAJ:UeHWp8X0CEIC},
@@ -98,6 +100,7 @@
 	author = {Guinet, Benjamin and Lepetit, David and Charlat, Sylvain and Buhl, Peter N and Notton, David G and Cruaud, Astrid and Rasplus, Jean-Yves and Stigenberg, Julia and De Vienne, Damien M and Boussau, Bastien and Varaldi, Julien},
 	month = jun,
   selected={true},
+  dimensions={true},
   pdf={elife-85993-v1-2.pdf},
 	year = {2023},
 	pages = {e85993},
@@ -119,6 +122,7 @@
 	year = {2020},
 	pages = {msaa030},
   selected={true},
+  dimensions={true},
   pdf={MBE_LbFV.pdf},
   google_scholar_id={https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=WRhFaLEAAAAJ&citation_for_view=WRhFaLEAAAAJ:u5HHmVD_uO8C},
 	file = {10.1146@annurev-ento-070720-074650.pdf:/Users/benjguin/Zotero/storage/2IVEKKW3/10.1146@annurev-ento-070720-074650.pdf:application/pdf;Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:/Users/benjguin/Zotero/storage/TQNGD5XQ/Di Giovanni et al. - 2020 - A behavior-manipulating virus relative as a source.pdf:application/pdf},
@@ -144,6 +148,7 @@
 	month = aug,
 	year = {2024},
 	pages = {eadp8625},
+  dimensions={true},
   pdf={sciadv.adp8625-1.pdf},
 	file = {Full Text:/Users/benjguin/Zotero/storage/4NKH5EK6/Rodríguez-Varela et al. - 2024 - Five centuries of consanguinity, isolation, health.pdf:application/pdf},
 }
@@ -160,6 +165,7 @@
 	urldate = {2025-05-12},
 	author = {Oskolkov, Nikolay and Jin, Chenyu and Clinton, Samantha López and Guinet, Benjamin and Wijnands, Flore and Johnson, Ernst and Kutschera, Verena E. and Kinsella, Cormac M. and Heintzman, Peter D. and Van Der Valk, Tom},
 	month = mar,
+  dimensions={true},
 	year = {2025},
 }
 
