--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@
 	month = jan,
 	year = {2025},
   selected={true},
-    dimensions={true},
+  dimensions={true},
   pdf={PROCB-Dating.pdf},
 	pages = {20242135},
 }
@@ -70,8 +70,7 @@
 	issn = {2057-1577},
 	url = {https://academic.oup.com/ve/article/doi/10.1093/ve/veae022/7644867},
 	doi = {10.1093/ve/veae022},
-	abstract = {Abstract
-            Large dsDNA viruses from the Naldaviricetes class are currently composed of four viral families infecting insects and/or crustaceans. Since the 1970s, particles described as filamentous viruses (FVs) have been observed by electronic microscopy in several species of Hymenoptera parasitoids but until recently, no genomic data was available. This study provides the first comparative morphological and genomic analysis of these FVs. We analyzed the genomes of seven FVs, six of which were newly obtained, to gain a better understanding of their evolutionary history. We show that these FVs share all genomic features of the Naldaviricetes while encoding five specific core genes that distinguish them from their closest relatives, the Hytrosaviruses. By mining public databases, we show that FVs preferentially infect Hymenoptera with parasitoid lifestyle and that these viruses have been repeatedly integrated into the genome of many insects, particularly Hymenoptera parasitoids, overall suggesting a long-standing specialization of these viruses to parasitic wasps. Finally, we propose a taxonomical revision of the class Naldaviricetes in which FVs related to the Leptopilina boulardi FV constitute a fifth family. We propose to name this new family, Filamentoviridae.},
+	abstract = {Large dsDNA viruses from the Naldaviricetes class are currently composed of four viral families infecting insects and/or crustaceans. Since the 1970s, particles described as filamentous viruses (FVs) have been observed by electronic microscopy in several species of Hymenoptera parasitoids but until recently, no genomic data was available. This study provides the first comparative morphological and genomic analysis of these FVs. We analyzed the genomes of seven FVs, six of which were newly obtained, to gain a better understanding of their evolutionary history. We show that these FVs share all genomic features of the Naldaviricetes while encoding five specific core genes that distinguish them from their closest relatives, the Hytrosaviruses. By mining public databases, we show that FVs preferentially infect Hymenoptera with parasitoid lifestyle and that these viruses have been repeatedly integrated into the genome of many insects, particularly Hymenoptera parasitoids, overall suggesting a long-standing specialization of these viruses to parasitic wasps. Finally, we propose a taxonomical revision of the class Naldaviricetes in which FVs related to the Leptopilina boulardi FV constitute a fifth family. We propose to name this new family, Filamentoviridae.},
 	language = {en},
 	number = {1},
 	urldate = {2024-04-15},
